--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="resources/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -28,7 +28,7 @@
         <div class="grid">
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/1.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/1.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">VueJS</p>
                         <p class="producto__precio">$25</p>
@@ -37,7 +37,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/2.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/2.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">AngularJS</p>
                         <p class="producto__precio">$25</p>
@@ -46,7 +46,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/3.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/3.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">ReactoJS</p>
                         <p class="producto__precio">$25</p>
@@ -55,7 +55,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/4.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/4.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Redux</p>
                         <p class="producto__precio">$25</p>
@@ -64,7 +64,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/5.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/5.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">NodeJS</p>
                         <p class="producto__precio">$25</p>
@@ -73,7 +73,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/6.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/6.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">SASS</p>
                         <p class="producto__precio">$25</p>
@@ -82,7 +82,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/7.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/7.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">HTML</p>
                         <p class="producto__precio">$25</p>
@@ -91,7 +91,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/8.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/8.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Github</p>
                         <p class="producto__precio">$25</p>
@@ -100,7 +100,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/9.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/9.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">BulmaCSS</p>
                         <p class="producto__precio">$25</p>
@@ -109,7 +109,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/10.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/10.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">TypeScript</p>
                         <p class="producto__precio">$25</p>
@@ -118,7 +118,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/11.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/11.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">Drupal</p>
                         <p class="producto__precio">$25</p>
@@ -127,7 +127,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/12.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/12.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">JS</p>
                         <p class="producto__precio">$25</p>
@@ -136,7 +136,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/13.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/13.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">GraphQL</p>
                         <p class="producto__precio">$25</p>
@@ -145,7 +145,7 @@
             </div><!--Producto-->
             <div class="producto">
                 <a href="producto.html">
-                    <img class="producto__imagen" src="img/14.jpg" alt="Imagen camiseta">
+                    <img class="producto__imagen" src="resources/img/14.jpg" alt="Imagen camiseta">
                     <div class="producto__informacion">
                         <p class="producto__nombre">WordPress</p>
                         <p class="producto__precio">$25</p>
