--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="resources/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -31,7 +31,7 @@
 
                 <p>Donec egestas bibendum ligula, in cursus turpis bibendum id. Quisque vel nunc at elit pellentesque dictum. Praesent ornare, ligula sed imperdiet volutpat, lectus turpis commodo dolor, eget maximus est velit at ante. Nullam odio lorem, accumsan sed mattis et, eleifend et mi. Etiam scelerisque lectus nec turpis finibus dignissim at eu sem. Nullam est nunc, efficitur vel odio a, consectetur interdum velit. Aliquam venenatis lorem quis tellus ullamcorper varius sit amet quis ligula. Duis nec malesuada mi. Sed tincidunt blandit diam et convallis.</p>
             </div>
-            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="Imagen nosotros">
+            <img class="nosotros__imagen" src="resources/img/nosotros.jpg" alt="Imagen nosotros">
         </div>
     </main>
 
@@ -40,25 +40,25 @@
 
         <div class="bloques">
             <div class="bloque">
-                <img class="bloque__imagen" src="img/icono_1.png" alt="Porque comprar">
+                <img class="bloque__imagen" src="resources/img/icono_1.png" alt="Porque comprar">
                 <h3 class="bloque__titulo">El mejor precio</h3>
                 <p>Aliquam venenatis lorem quis tellus ullamcorper varius sit amet quis ligula. Duis nec malesuada mi.</p>
             </div>
 
             <div class="bloque">
-                <img class="bloque__imagen" src="img/icono_2.png" alt="Porque comprar">
+                <img class="bloque__imagen" src="resources/img/icono_2.png" alt="Porque comprar">
                 <h3 class="bloque__titulo">Para devs</h3>
                 <p>Aliquam venenatis lorem quis tellus ullamcorper varius sit amet quis ligula. Duis nec malesuada mi.</p>
             </div>
 
             <div class="bloque">
-                <img class="bloque__imagen" src="img/icono_3.png" alt="Porque comprar">
+                <img class="bloque__imagen" src="resources/img/icono_3.png" alt="Porque comprar">
                 <h3 class="bloque__titulo">Envio gratis</h3>
                 <p>Aliquam venenatis lorem quis tellus ullamcorper varius sit amet quis ligula. Duis nec malesuada mi.</p>
             </div>
 
             <div class="bloque">
-                <img class="bloque__imagen" src="img/icono_4.png" alt="Porque comprar">
+                <img class="bloque__imagen" src="resources/img/icono_4.png" alt="Porque comprar">
                 <h3 class="bloque__titulo">La mejor calidad</h3>
                 <p>Aliquam venenatis lorem quis tellus ullamcorper varius sit amet quis ligula. Duis nec malesuada mi.</p>
             </div>
