--- a/producto.html
+++ b/producto.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="resources/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -26,7 +26,7 @@
         <h1>React JS</h1>
 
         <div class="camiseta">
-            <img class="camiseta__imagen" src="img/3.jpg" alt="Imagen del producto">
+            <img class="camiseta__imagen" src="resources/img/3.jpg" alt="Imagen del producto">
 
             <div class="camiseta__contenido">
                 <p>
